Fixing minor Chrome flicker bug with example

--- a/www/src/components/motion/general/scale/index.module.scss
+++ b/www/src/components/motion/general/scale/index.module.scss
@@ -18,7 +18,7 @@
 
 .image {
     background: url(./training.jpg);
-    background-size: cover;
+    background-size: 144%;
     background-position: right;
     height: 100px;
 }
